Authentication via JWT and Password reset
Restarting user password via email coniformation. Minor fixes related to JWT token authentication.
